Use hostpath for mysql and postgres pods.

--- a/deployment-postgres.yaml
+++ b/deployment-postgres.yaml
@@ -24,3 +24,11 @@ spec:
               value: sasa
             - name: POSTGRES_DB
               value: msvc-k8-courses
+          volumeMounts:
+            - name: data-postgres
+              mountPath: /var/lib/postgresql/data
+      volumes:
+        - name: data-postgres
+          hostPath:
+            path: /var/lib/postgresql/data
+            type: DirectoryOrCreate
