--- a/deployment-mysql.yaml
+++ b/deployment-mysql.yaml
@@ -22,3 +22,11 @@ spec:
             value: sasa1234
           - name: MYSQL_DATABASE
             value: msvc_k8_users
+        volumeMounts:
+          - name: data-mysql
+            mountPath: /var/lib/mysql
+      volumes:
+        - name: data-mysql
+          hostPath:
+            path: /var/lib/mysql
+            type: DirectoryOrCreate
