--- a/deployment-users.yaml
+++ b/deployment-users.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: msvc-k8-users
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: msvc-k8-users
@@ -17,3 +17,34 @@ spec:
         name: msvc-k8-users
         ports:
         - containerPort: 8001
+        env:
+          - name: PORT
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: port
+          - name: DB_HOST
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: db_host
+          - name: DB_DATABASE
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: database
+          - name: DB_USERNAME
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: username
+          - name: DB_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: password
+          - name: COURSES_URL
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: courses_url
