--- a/deployment-postgres.yaml
+++ b/deployment-postgres.yaml
@@ -19,11 +19,20 @@ spec:
             - containerPort: 5432
           env:
             - name: POSTGRES_USER
-              value: postgres
+              valueFrom:
+                configMapKeyRef:
+                  name: msvc-k8-courses
+                  key: username
             - name: POSTGRES_PASSWORD
-              value: sasa
+              valueFrom:
+                configMapKeyRef:
+                  name: msvc-k8-courses
+                  key: password
             - name: POSTGRES_DB
-              value: msvc-k8-courses
+              valueFrom:
+                configMapKeyRef:
+                  name: msvc-k8-courses
+                  key: database
           volumeMounts:
             - name: data-postgres
               mountPath: /var/lib/postgresql/data
