--- a/deployment-course.yaml
+++ b/deployment-course.yaml
@@ -35,12 +35,12 @@ spec:
                 key: database
           - name: DB_USERNAME
             valueFrom:
-              configMapKeyRef:
+              secretKeyRef:
                 name: msvc-k8-courses
                 key: username
           - name: DB_PASSWORD
             valueFrom:
-              configMapKeyRef:
+              secretKeyRef:
                 name: msvc-k8-courses
                 key: password
           - name: USERS_URL
