--- a/deployment-mysql.yaml
+++ b/deployment-mysql.yaml
@@ -20,7 +20,7 @@ spec:
         env:
           - name: MYSQL_ROOT_PASSWORD
             valueFrom:
-              configMapKeyRef:
+              secretKeyRef:
                 name: msvc-k8-users
                 key: password
           - name: MYSQL_DATABASE
