--- a/deployment-users.yaml
+++ b/deployment-users.yaml
@@ -35,12 +35,12 @@ spec:
                 key: database
           - name: DB_USERNAME
             valueFrom:
-              configMapKeyRef:
+              secretKeyRef:
                 name: msvc-k8-users
                 key: username
           - name: DB_PASSWORD
             valueFrom:
-              configMapKeyRef:
+              secretKeyRef:
                 name: msvc-k8-users
                 key: password
           - name: COURSES_URL
