Add readinessProbe and livenessProbe

--- a/deployment-users.yaml
+++ b/deployment-users.yaml
@@ -62,4 +62,20 @@ spec:
               configMapKeyRef:
                 name: msvc-k8-users
                 key: environment
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: 8001
+            scheme: HTTP
+          initialDelaySeconds: 5
+          periodSeconds: 20
+          timeoutSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 8001
+            scheme: HTTP
+          initialDelaySeconds: 10
+          periodSeconds: 30
+          timeoutSeconds: 10
 
