--- a/deployment-users.yaml
+++ b/deployment-users.yaml
@@ -78,4 +78,11 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 20
           timeoutSeconds: 5
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "200m"
+          limits:
+            memory: "400Mi"
+            cpu: "350m"
 
