--- a/deployment-course.yaml
+++ b/deployment-course.yaml
@@ -19,6 +19,14 @@ spec:
         ports:
         - containerPort: 8002
         env:
+          - name: MY_POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: MY_POD_IP
+            valueFrom:
+              fieldRef:
+                fieldPath: status.podIP
           - name: PORT
             valueFrom:
               configMapKeyRef:
