--- a/deployment-course.yaml
+++ b/deployment-course.yaml
@@ -57,3 +57,8 @@ spec:
               configMapKeyRef:
                 name: msvc-k8-courses
                 key: users_url
+          - name: ENVIRONMENT
+            valueFrom:
+              configMapKeyRef:
+                name: msvc-k8-users
+                key: environment
