--- a/persistentVolumeClaim-postgres.yaml
+++ b/persistentVolumeClaim-postgres.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   volumeName: postgres-pv
   accessModes:
-    - ReadWriteOnce
-  storageClassName: standard
+#    - ReadWriteOnce
+    - ReadWriteMany
+  storageClassName: ""
   resources:
     requests:
       storage: 2Gi
