--- a/persistentVolumeClaim-mysql.yaml
+++ b/persistentVolumeClaim-mysql.yaml
@@ -5,8 +5,10 @@ metadata:
 spec:
   volumeName: mysql-pv
   accessModes:
-    - ReadWriteOnce
-  storageClassName: standard
+#    - ReadWriteOnce
+    - ReadWriteMany
+#  storageClassName: standard
+  storageClassName: ""
   resources:
     requests:
       storage: 2Gi
